--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,21 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+# My Local Environment
+
+server.port=8000
+
+
+# DataSource Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/issuemanagment
+spring.datasource.username=postgres
+spring.datasource.password=ewognbzp4rk5
+spring.jpa.show-sql=true
+
+#CodeFirst, DbFirst
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.root= INFO
+logging.level.org.springframework.web= DEBUG
+logging.level.org.hibernate= DEBUG
 
