--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.show-sql=true
 #CodeFirst, DbFirst
 spring.jpa.hibernate.ddl-auto=update
 
-logging.level.root= INFO
-logging.level.org.springframework.web= DEBUG
-logging.level.org.hibernate= DEBUG
+logging.level.root= ERROR
+logging.level.org.springframework.web= ERROR
+logging.level.org.hibernate= ERROR
 
